Arrumei a imagem do banner e adicionei a seção sobre nós

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <div class="header">
         <div class="container">
             <div class="logo">
@@ -21,11 +22,55 @@
             </ul>
         </div>
     </div>
+    <!-- Banner -->
     <div class="banner">
         <div class="container">
             <p>A rivalidade que <b>inspirou</b> uma geração</p>
         </div>
-        <!-- <img src="imagens/image 3cr7-messi.png"> -->
+    </div>
+    <!-- Sobre nós -->
+    <div class="sobreNos">
+        <div class="container">
+            <h1>Sobre nós</h1>
+            <div class="secao">
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+                            <!-- <img src="imagens/do-utilizador.png" style="width: 50px;"><br> -->
+                        </div>
+                        <div class="texto">
+                            <span>O criador</span>
+                            <h2>Matheus Munari Denani</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, commodi? Velit quaerat a reprehenderit enim consectetur consequuntur autem debitis expedita ducimus qui ut amet, iure nemo ullam aut at officiis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+
+                        </div>
+                        <div class="texto">
+                            <span>Sobre o GOAT</span>
+                            <h2>Estatísticas e análise</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, doloribus distinctio aliquam soluta perferendis repudiandae veritatis. Ipsa, totam. Tempora expedita quam recusandae optio magnam blanditiis odio, nesciunt rem quos praesentium.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+
+                        </div>
+                        <div class="texto">
+                            <span>O que nos move</span>
+                            <h2>Futebol contra a desigualdade</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat unde aut suscipit at quod, doloribus hic facere, magni eum explicabo ipsum ex similique mollitia et. Explicabo porro pariatur facere sint?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
