Alterei os textos do sobre nós e adicinei os icones

--- a/index.html
+++ b/index.html
@@ -36,37 +36,36 @@
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-                            <!-- <img src="imagens/do-utilizador.png" style="width: 50px;"><br> -->
+                            <img src="imagens/do-utilizador.png" style="width: 24px;"><br>
                         </div>
                         <div class="texto">
                             <span>O criador</span>
                             <h2>Matheus Munari Denani</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, commodi? Velit quaerat a reprehenderit enim consectetur consequuntur autem debitis expedita ducimus qui ut amet, iure nemo ullam aut at officiis.</p>
+                            <p>Assim como muitos de vocês eu cresci acompanhando futebol, e como qualquer outro fã do esporte logo me apaixonei em acompanhar os melhores, e desde que eu me conheço por gente os melhores sempre foram Cristiano Ronaldo e Messi, e este site tem como principal intuito homenagear estes gênios que moldaram muito de quem eu sou hoje.</p>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-
+                            <img src="imagens/info.png" style="width: 30px;">
                         </div>
                         <div class="texto">
                             <span>Sobre o GOAT</span>
                             <h2>Estatísticas e análise</h2>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, doloribus distinctio aliquam soluta perferendis repudiandae veritatis. Ipsa, totam. Tempora expedita quam recusandae optio magnam blanditiis odio, nesciunt rem quos praesentium.</p>
+                            <p>Quem é maior Cristano ou Messi? Você consegue responder a pergunta que gerou o maior debate de todos os tempos entre os fãs do esporte?  Aqui você conseguirá comparar 2 dos maiores de todos os tempos, ver detalhadamente as carreiras de CR7 e Messi e escolher o seu favorito, ver o que as outras pessoas escolheram, jogar e se encantar com as carreiras dos GOATs. </p>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-
+                            <img src="imagens/contorno-em-forma-de-coracao.png" style="width: 24px;">
                         </div>
                         <div class="texto">
                             <span>O que nos move</span>
                             <h2>Futebol contra a desigualdade</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat unde aut suscipit at quod, doloribus hic facere, magni eum explicabo ipsum ex similique mollitia et. Explicabo porro pariatur facere sint?</p>
-                        </div>
+                            <p>O futebol é um jogo de todos, para todos, mas não está imune a desigualdades, muitos casos de racismo ainda ocorrem em partidas pelo mundo, porém o futebol tem sido uma ferramenta de mudança rumo a um mundo mais justo e igual, nós do GOAT acreditamos nisso.
                     </div>
                 </div>
             </div>
