--- a/login_cadastro.html
+++ b/login_cadastro.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="login_cadastro.css">
     <title>Login/Cadastro</title>
 </head>
-<body>
+<body onload="underline()">
     <div class="page">
         <div class="inputs">
             <div class="container">
@@ -16,14 +16,14 @@
                 </div>
                 <div class="formulario">
                     <div class="navbar">
-                        <div class="loginBtn">
-                            <button>Login</button>
+                        <div class="loginBtn" id="div_botao_login">
+                            <button onclick="login()">Login</button>
                         </div>
-                        <div class="cadastroBtn">
-                            <button>Cadastro</button>
+                        <div class="cadastroBtn" id="div_botao_cadastro">
+                            <button onclick="cadastro()">Cadastro</button>
                         </div>
                     </div>
-                    <div class="formLogin">
+                    <div class="formLogin" id="form_login">
                         <input type="text" placeholder="Email">
                         <input type="password" placeholder="Senha">
                         <div class="lembrarSenha">
@@ -31,6 +31,14 @@
                             <span>Lembrar senha</span>
                         </div>
                         <button>Logar</button>
+                    </div>
+                    <div class="formCadastro" id="form_cadastro">
+                        <input type="text" placeholder="Nome de usuário">
+                        <input type="date" >
+                        <input type="text" placeholder="Email">
+                        <input type="text" placeholder="Digite uma senha">
+                        <input type="text" placeholder="Confirme sua senha">
+                        <button>Cadastro 1/2</button>
                     </div>
                 </div>
                 
@@ -41,3 +49,24 @@
     </div>
 </body>
 </html>
+
+<script>
+    function cadastro() {
+        div_botao_cadastro.style.borderBottom = "2px solid white";
+        div_botao_login.style.border = "none";
+        form_cadastro.style.display = "flex";
+        form_login.style.display = "none"
+
+    }
+
+    function login() {
+        div_botao_login.style.borderBottom = "2px solid white";
+        div_botao_cadastro.style.border = "none";
+        form_cadastro.style.display = "none";
+        form_login.style.display = "flex";
+    }
+
+    function underline() {
+        div_botao_login.style.borderBottom = "2px solid white";
+    }
+</script>
