--- a/dashboard.html
+++ b/dashboard.html
@@ -7,55 +7,91 @@
     <link rel="stylesheet" href="dashboard.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <div class="gridContainer">
+
+        <!-- Header -->
+        <div class="header">
+            <div class="header-esquerda">
+                <span class="material-icons">search</span>
+            </div>
+            <div class="header-direira">
+                <span class="material-icons">notifications</span>
+                <span class="material-icons">email</span>
+            </div>
+        </div>
+
+        <!-- Sidebar -->
         <div class="sidebar">
-            <div class="header">
-                <img src="imagens/messi-art.png" class="logo">
+            <div class="sidebar-titulo">
+                <img src="imagens/messi-art.png" class="img-icone">
+                <span>NOME USUARIO</span>
             </div>
-            <div class="nav">
-                <button>
-                    <span>
-                        <i class="material-icons">analytics</i>
-                        <span>Analytics</span>
-                    </span>
-                </button>
-                <button>
-                    <span>
-                        <i class="material-icons">inbox</i>
-                        <span>Carreiras</span>
-                    </span>
-                </button>
-                <button>
-                    <span>
-                        <i class="material-icons">logout</i>
-                        <span>Sair</span>
-                    </span>
-                </button>
+
+            <ul class="sidebar-list">
+                <li class="sidebar-list-item">
+                    <span class="material-icons">dashboard</span> Dashboard
+                </li>
+                <li class="sidebar-list-item">
+                    <span class="material-icons">inbox</span> Histórico
+                </li>
+                <li class="sidebar-list-item">
+                    <span class="material-icons">logout</span> Sair
+                </li>
+            </ul>
+        </div>
+
+        <!-- Main -->
+        <div class="main-container">
+            <div class="main-titulo">
+                <p class="font-weight-bold">DASHBOARD</p>
+            </div>
+
+            <div class="main-cards">
+                <div class="card">
+                    <div class="card-inner">
+                        <p class="text-primary">TEXTO</p>
+                        <span class="material-symbols-outlined">
+                            analytics
+                            </span>
+                    </div>
+                    <span class="text-primary font-weight-bold">500</span>
+                </div>
+
+                <div class="card">
+                    <div class="card-inner">
+                        <p class="text-primary">Messizetes</p>
+                        <span class="material-symbols-outlined text-green">
+                            trending_up
+                            </span>
+                    </div>
+                    <span class="text-primary font-weight-bold">500</span>
+                </div>
+
+                <div class="card">
+                    <div class="card-inner">
+                        <p class="text-primary">Ronaldetes</p>
+                        <span class="material-symbols-outlined text-red">
+                            trending_down
+                            </span>
+                    </div>
+                    <span class="text-primary font-weight-bold">500</span>
+                </div>
+
+                <div class="card">
+                    <div class="card-inner">
+                        <p class="text-primary">Ronaldetes</p>
+                        <span class="material-symbols-outlined text-red">
+                            trending_down
+                            </span>
+                    </div>
+                    <span class="text-primary font-weight-bold">500</span>
+                </div>
             </div>
         </div>
-        <div class="main">
-            <div class="listaCard">
-                <div class="card">
-
-                </div>
-                <div class="card">
-
-                </div>
-                <div class="card">
-
-                </div>
-            </div>
-
-            <div class="graficos">
-                <div class="grafico">
-
-                </div>
-                <div class="grafico">
-
-                </div>
-            </div>
-        </div>
+    </div>       
         
 </body>
 </html>
