Organizei o projeto em diretorios especificos

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOAT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -13,8 +13,8 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <img src="imagens/image 1.png" style="width: 70px;">
-                <img src="imagens/Vectorlogomarca.png" style="width: 70px;">
+                <img src="../imagens/image 1.png" style="width: 70px;">
+                <img src="../imagens/Vectorlogomarca.png" style="width: 70px;">
             </div>
             <ul class="navbar">
                 <li><a href="#">Sobre nós</a></li>
@@ -36,7 +36,7 @@
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-                            <img src="imagens/do-utilizador.png" style="width: 24px;"><br>
+                            <img src="../imagens/do-utilizador.png" style="width: 24px;"><br>
                         </div>
                         <div class="texto">
                             <span>O criador</span>
@@ -48,7 +48,7 @@
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-                            <img src="imagens/info.png" style="width: 30px;">
+                            <img src="../imagens/info.png" style="width: 30px;">
                         </div>
                         <div class="texto">
                             <span>Sobre o GOAT</span>
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="conteudo">
                         <div class="icone">
-                            <img src="imagens/contorno-em-forma-de-coracao.png" style="width: 24px;">
+                            <img src="../imagens/contorno-em-forma-de-coracao.png" style="width: 24px;">
                         </div>
                         <div class="texto">
                             <span>O que nos move</span>
