--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -26,7 +26,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-titulo">
-                <img src="imagens/messi-art.png" class="img-icone">
+                <img src="../imagens/messi-art.png" class="img-icone">
                 <span>NOME USUARIO</span>
             </div>
 
@@ -88,6 +88,15 @@
                             </span>
                     </div>
                     <span class="text-primary font-weight-bold">500</span>
+                </div>
+
+            </div>
+            <div class="main-conteudo">
+                <div class="main-grafico">
+
+                </div>
+                <div class="main-grafico">
+
                 </div>
             </div>
         </div>
