--- a/public/html/login_cadastro.html
+++ b/public/html/login_cadastro.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login_cadastro.css">
-    <script src="cadastro.js"></script>
+    <link rel="stylesheet" href="../css/login_cadastro.css">
+    <script src="../js/cadastro.js"></script>
     <title>Login/Cadastro</title>
 </head>
 <body onload="underline()">
@@ -12,8 +12,8 @@
         <div class="inputs">
             <div class="container">
                 <div class="logo">
-                    <img src="imagens/image 1.png" style="width: 70px;">
-                    <img src="imagens/Vectorlogomarca.png" style="width: 70px;">
+                    <img src="../imagens/image 1.png" style="width: 70px;">
+                    <img src="../imagens/Vectorlogomarca.png" style="width: 70px;">
                 </div>
                 <div class="formulario">
                     <div class="navbar">
