Arrumei a quebra do layout da versão antiga

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -106,17 +106,19 @@
                     </div>
                     <canvas id="myChart"></canvas>
                 </div>
-                <div class="main-detalhe">
-                    <div class="main-jogadores">
-                        <img src="../imagens/messi-art.png" class="img-icone">
-                        <span>Lionel Messi</span>
-                        <div class="main-estatisticas" id="div_estatisticas_messi">
+                <div class="main-grafico">
+                    <div class="main-detalhe">
+                        <div class="main-jogadores">
+                            <img src="../imagens/messi-art.png" class="img-icone">
+                            <span>Lionel Messi</span>
+                            <div class="main-estatisticas" id="div_estatisticas_messi">
+                            </div>
                         </div>
-                    </div>
-                    <div class="main-jogadores">
-                        <img src="../imagens/messi-art.png" class="img-icone">
-                        <span>Cristiano Ronaldo</span>
-                        <div class="main-estatisticas" id="div_estatisticas_cr7">
+                        <div class="main-jogadores">
+                            <img src="../imagens/messi-art.png" class="img-icone">
+                            <span>Cristiano Ronaldo</span>
+                            <div class="main-estatisticas" id="div_estatisticas_cr7">
+                            </div>
                         </div>
                     </div>
                 </div>
