--- a/web-data-viz/site/public/dashboard/dashboard.html
+++ b/web-data-viz/site/public/dashboard/dashboard.html
@@ -85,7 +85,7 @@
 
 <!-- </body> -->
 
-<body onload="obterDadosJogadores(), mudarFoto()">
+<body onload="obterDadosJogadores(), mudarFoto(), obterContagemUsuarios()">
     <div class="gridContainer">
 
         <!-- Header -->
@@ -133,7 +133,7 @@
                             analytics
                             </span>
                     </div>
-                    <span class="text-primary font-weight-bold">500</span>
+                    <span class="text-primary font-weight-bold" id="card_usuarios">500</span>
                 </div>
 
                 <div class="card">
@@ -143,7 +143,7 @@
                             trending_up
                             </span>
                     </div>
-                    <span class="text-primary font-weight-bold">500</span>
+                    <span class="text-primary font-weight-bold" id="card_usuarios_messi">500</span>
                 </div>
 
                 <div class="card">
@@ -153,7 +153,7 @@
                             trending_down
                             </span>
                     </div>
-                    <span class="text-primary font-weight-bold">500</span>
+                    <span class="text-primary font-weight-bold" id="card_usuarios_cr7">500</span>
                 </div>
 
                 <div class="card">
@@ -163,7 +163,7 @@
                             trending_down
                             </span>
                     </div>
-                    <span class="text-primary font-weight-bold">500</span>
+                    <span class="text-primary font-weight-bold" >500</span>
                 </div>
 
             </div>
@@ -316,6 +316,60 @@
     var cr7 = [];
     var cr7Estatistica = [];
     var temporadas = [];
+    var contUsuarios = 0;
+    var contMessi = 0;
+
+    function obterContagemUsuarios() {
+
+        fetch(`/jogadores/contarUsuarios`, {
+            cache: 'no-store'}).then(function(response) {
+                if(response.ok) {
+                    response.json().then(function(resposta) {
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+
+                        contUsuarios = resposta[0].contUsuarios;
+
+                        obterContagemMessi();
+                    });
+                }else {
+                    console.error('Nenhum dado encontrado ou erro na API')
+                }
+            })
+                .catch(function (error) {
+                    console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`)
+                })
+
+    }
+
+    function obterContagemMessi() {
+        
+        fetch(`/jogadores/contarMessi`, {
+            cache: 'no-store'}).then(function(response) {
+                if(response.ok) {
+                    response.json().then(function(resposta) {
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+
+                        contMessi = resposta[0].contMessi;  
+
+                        atualizarCards();
+                    });
+                }else {
+                    console.error('Nenhum dado encontrado ou erro na API')
+                }
+            })
+                .catch(function (error) {
+                    console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`)
+                })
+    }
+
+    function atualizarCards() {
+        var contCr7 = contUsuarios - contMessi;
+
+        card_usuarios.innerText = contUsuarios;
+        card_usuarios_messi.innerText = contMessi;
+        card_usuarios_cr7.innerText = contCr7;
+        
+    }
 
     function obterDadosJogadores() {
 
@@ -399,8 +453,6 @@
 
 
     function plotarGrafico(resposta) {
-        var testeGolM = [3, 12, 25]
-        var testeGolC = [5, 16, 32]
 
         console.log('iniciando plotagem do gráfico...');
 
@@ -417,7 +469,7 @@
         for (i = 0; i < resposta.length; i++) {
             var registro = resposta[i];
             if (i % 2 == 0) {
-                temporadas.push(registro.fkTemporada);
+                temporadas.push(registro.temporada);
                 messi.push(registro);
             } else {
                 cr7.push(registro);
