Adicionei as paginas de perfil e minha carreira

--- a/web-data-viz/site/public/index.html
+++ b/web-data-viz/site/public/index.html
@@ -1,85 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>AquaTech | Página Inicial</title>
-
-    <script src="./js/sessao.js"></script>
-
-    <link rel="icon" href="./assets/icon/favicon2.ico">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- <link
-        href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet"> -->
+    <title>GOAT</title>
+    <link rel="stylesheet" href="./css/index-style.css">
 </head>
 
 <body>
+    <!-- Header -->
     <div class="header">
-      <div class="container">
-        <h1 class="titulo">AquaTech</h1>
-        <ul class="navbar">
-          <li class="agora">
-            <a href="#">Inicial</a>
-          </li>
-          <li>
-            <a href="simulador.html">Simulador</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="login.html">Login</a>
-          </li>
-          <li>
-            <a href="cadastro.html">Cadastro</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  
-    <div class="banner">
-      <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
-      </div>
-    </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
+        <div class="container">
+            <div class="logo">
+                <img src="./assets/imagens/image 1.png" style="width: 70px;">
+                <img src="./assets/imagens/Vectorlogomarca.png" style="width: 70px;">
+            </div>
+            <ul class="navbar">
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="./cadastro.html">Login/Cadastro</a></li>
+            </ul>
         </div>
-      </div>
     </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
-      </div>
+    <!-- Banner -->
+    <div class="banner">
+        <div class="container">
+            <p>A rivalidade que <b>inspirou</b> uma geração</p>
+        </div>
     </div>
-  </body>
+    <!-- Sobre nós -->
+    <div class="sobreNos">
+        <div class="container">
+            <h1>Sobre nós</h1>
+            <div class="secao">
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+                            <img src="./assets/imagens/do-utilizador.png" style="width: 24px;"><br>
+                        </div>
+                        <div class="texto">
+                            <span>O criador</span>
+                            <h2>Matheus Munari Denani</h2>
+                            <p>Assim como muitos de vocês eu cresci acompanhando futebol, e como qualquer outro fã do esporte logo me apaixonei em acompanhar os melhores, e desde que eu me conheço por gente os melhores sempre foram Cristiano Ronaldo e Messi, e este site tem como principal intuito homenagear estes gênios que moldaram muito de quem eu sou hoje.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+                            <img src="./assets/imagens/info.png" style="width: 30px;">
+                        </div>
+                        <div class="texto">
+                            <span>Sobre o GOAT</span>
+                            <h2>Estatísticas e análise</h2>
+                            <p>Quem é maior Cristano ou Messi? Você consegue responder a pergunta que gerou o maior debate de todos os tempos entre os fãs do esporte?  Aqui você conseguirá comparar 2 dos maiores de todos os tempos, ver detalhadamente as carreiras de CR7 e Messi e escolher o seu favorito, ver o que as outras pessoas escolheram, jogar e se encantar com as carreiras dos GOATs. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="conteudo">
+                        <div class="icone">
+                            <img src="./assets/imagens/contorno-em-forma-de-coracao.png" style="width: 24px;">
+                        </div>
+                        <div class="texto">
+                            <span>O que nos move</span>
+                            <h2>Futebol contra a desigualdade</h2>
+                            <p>O futebol é um jogo de todos, para todos, mas não está imune a desigualdades, muitos casos de racismo ainda ocorrem em partidas pelo mundo, porém o futebol tem sido uma ferramenta de mudança rumo a um mundo mais justo e igual, nós do GOAT acreditamos nisso.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
