--- a/web-data-viz/site/public/dashboard/dashboard.html
+++ b/web-data-viz/site/public/dashboard/dashboard.html
@@ -18,14 +18,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+      <script src="https://kit.fontawesome.com/c213e24a43.js" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
       <!-- Fim dos links -->
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
 
     <!-- scripts do Chart.js - 2022-1 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -33,57 +35,6 @@
     <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/9f7414eb10.js" crossorigin="anonymous"></script>
 </head>
-
-<!-- <body onload=" atualizarFeed()"> -->
-
-<!-- <body>
-
-    <div class="janela">
-        <div class="header-left">
-            <h1>AquaTech</h1>
-
-            <div class="hello">
-                <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="./cards.html">
-                    <h3>Aquários</h3>
-                </a>
-            </div>
-
-            <div class="btn-nav">
-
-                <h3>Gráficos</h3>
-
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="./mural.html">
-                    <h3>Mural de Avisos</h3>
-                </a>
-            </div>
-
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
-            </div>
-
-        </div>
-
-        <div class="dash">
-            <div id="alerta">
-            </div> -->
-
-            <!-- <div class="btns-dash" id="btnAquario"> -->
-                <!-- O gráfico é chamado de acordo com o id (fk_aquario) do banco  -->
-            <!-- </div>
-            <div id="graficos">
-            </div>
-        </div>
-    </div> -->
-
-
-<!-- </body> -->
 
 <body onload="obterDadosJogadores(), mudarFoto(), obterContagemUsuarios(), underlineJog()">
     <div class="gridContainer">
@@ -108,13 +59,24 @@
 
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-                    <span class="material-icons">dashboard</span> Dashboard
+                    <a href="./dashboard.html">
+                        <i class="fa-solid fa-chart-line"></i> Dashboard
+                    </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <span class="material-icons">inbox</span> Histórico
+                    <a href="./perfil.html">
+                        <i class="fa-solid fa-user"></i>Perfil
+                    </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <span class="material-icons">logout</span> Sair
+                    <a href="./minha-carreira.html">
+                        <i class="fa-solid fa-trophy"></i>Minha Carreira
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="../index.html">
+                        <span class="material-icons">logout</span> Sair
+                    </a>
                 </li>
             </ul>
         </div>
@@ -156,7 +118,7 @@
                     <span class="text-primary font-weight-bold" id="card_usuarios_cr7">500</span>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-inner">
                         <p class="text-primary">Ronaldetes</p>
                         <span class="material-symbols-outlined text-red">
@@ -164,7 +126,7 @@
                             </span>
                     </div>
                     <span class="text-primary font-weight-bold" >500</span>
-                </div>
+                </div> -->
 
             </div>
             <div class="main-conteudo">
@@ -237,7 +199,7 @@
                     <div class="tabela-estatistica">
 
                            <table>
-                                <thead>
+                                <thead class="header-tabela">
                                     
                                         <th>Temporada</th>
                                         <th>Jogos</th>
